# GeometryWars

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Engine.cpp  Game.cpp  LICENSE  README.md  run.sh
resources/: spaceship.xcf
src/: Game.cpp
src/engine/: Engine.cpp  Primitives.hpp
src/engine/Core/: GameObject.cpp  GameObject.hpp  IGameObjectsManager.cpp  IGameObjectsManager.hpp  ISystem.cpp  ISystem.hpp  LayersManager.cpp  LayersManager.hpp  World.cpp  World.hpp
src/engine/ECS/: ECS.hpp  Type.h  World.cpp  World.h
src/engine/ECS/Component/: IComponentBucket.h
src/engine/Gameplay/: Components.hpp  Systems.cpp  Systems.hpp
src/engine/Graphics/: Color.cpp  Color.hpp  Render.cpp  Render.hpp
src/engine/Physics/: Collisions.cpp  Collisions.hpp  MovableObject.cpp  MovableObject.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  RigidBody.cpp  RigidBody.hpp  RigidObject.cpp  RigidObject.hpp
src/game/: Components.hpp  GameObjectManager.cpp  GameObjectManager.h  Systems.cpp  Systems.hpp
